-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.17.0
-
3
-
9223372036854775807
When handling CM events, o2iblnd expects RDMA_CM_EVENT_ESTABLISHED to be received when the connection is either in IBLND_CONN_PASSIVE_WAIT or IBLND_CONN_ACTIVE_CONNECT state, otherwise LBUG occurs.
Modify kiblnd_cm_callback() to handle this gracefully: report an error with relevant details and ignore the event rather than just crash.
This has been reported in the field with RoCE v2 setup.